
 - ``srv`` and ``azure`` are no longer valid configuration options for ``discovery.type``.
   Instead there is a new ``discovery.zen.hosts_provider`` settings which can
   be set to either ``srv`` or ``azure``.

Breaking Changes (Packaging only)
=================================

 - The sigar jar and object files have been moved from ``plugins/sigar`` to
   ``lib/sigar``.

Changes
=======

 - Added SSL/TLS support for HTTP endpoints.

 - Added new HBA setting ``ssl`` which allows to control whether
   users have to connect with ssl enabled or disabled.

 - Added SSL/TLS support for PostgreSQL Wire Protocol.

 - Updated Elasticsearch to 5.1.2
 - Extended the output of the  ``EXPLAIN`` statement.

 - Added support for joins on virtual tables.

Fixes
=====

 - Fixed a bug in the memory accounting of the circuit breaker for HTTP
   results when querying for columns of undefined type.

 - Fixed issue that caused an exception when querying the `_id` column using all
   defined primary keys inside the ``WHERE`` clause over the HTTP API.

 - Fixed wrong results when querying ``IS NULL`` on an array of objects.

 - Fixed an issue that caused an Exception to be thrown on ``JOIN`` queries
   with 4 or more tables when an ``ORDER BY`` is also applied.

 - Fixed an issue that resulted in rows could not be queried by primary keys
   when the order of the primary key columns on insert differs from the order of
   the primary keys on the table definition.
   Note: If records are already inserted by using a different primary key column
   order, they must be re-inserted, otherwise queries will still fail.

 - Fixed an issue that could cause ``DELETE`` by query  and ``UPDATE``
   statements to fail on datasets larger than 10_000 rows.

 - Improved the resiliency of queries on `sys.nodes`: If a node disconnects
   during the execution of a query it will no longer fail.

 - Added proper handling when memory requirements of a ``JOIN`` query exceeds